Added LOGIN/REGISTER and HASHING, database access layer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.port=5000
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
+spring.datasource.url=jdbc:sqlserver://face-detection.database.windows.net:1433;databaseName=face-detection-db;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.username=vignesh@face-detection
+spring.datasource.password=21August
